adding support for JBossAS 510